--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
+											<li><a href="#three">Services</a></li>
 											<li><a href="about.html">Our Story</a></li>
 											<li><a href="team.html">The Team</a></li>
 											<li><a href="contact.html">Contact Us</a></li>
