--- a/contact.html
+++ b/contact.html
@@ -120,7 +120,7 @@
 							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; <a href = "#" target="_blank">Abhinav Khetarpal</a></li><li>Design: <a href="http://html5up.net" target="_blank">HTML5 UP</a></li>
+							<li>&copy; <a href = "https://abhinavkhetarpal.netlify.app/" target="_blank">Abhinav Khetarpal</a></li><li>Design: <a href="http://html5up.net" target="_blank">HTML5 UP</a></li>
 						</ul>
 					</footer>
 
