--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
                 <!-- Two  -->
                 <section id="two" class="wrapper alt style2">
                     <section class="spotlight">
-                        <div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
+                        <div class="image"><img src="images/pic02.jpg" alt="Barber Shop Seating" /></div><div class="content">
                             <h2>Barber Shop<br />
                             Hours</h2>
                             <p>Monday - Sunday 9am - 6pm</p>
@@ -76,7 +76,7 @@
                         </div>
                     </section>
                     <section class="spotlight">
-                        <div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
+                        <div class="image"><img src="images/pic03.jpg" alt="Barber Shop Team" /></div><div class="content">
                             <h2>The<br />
                             Team</h2>
                             <p>We specialize in classic cuts and constantly seek out the latest trends and techniques to share with our guests.</p>
