--- a/contact.html
+++ b/contact.html
@@ -81,7 +81,7 @@
                 <!-- Two  -->
                 <section id="two" class="wrapper alt style2">
                     <section class="spotlight">
-                        <div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
+                        <div class="image"><img src="images/pic01.jpg" alt="Premium Barber Shop" /></div><div class="content">
                             <h2>About <br />
                             Jack &amp; Harlow</h2>
                             <p>We are the premier, long-standing full-service barber shop in the Rockliffe Park area.</p>
@@ -89,7 +89,7 @@
                         </div>
                     </section>
                     <section class="spotlight">
-                        <div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
+                        <div class="image"><img src="images/pic03.jpg" alt="Barber Shop Team" /></div><div class="content">
                             <h2>The<br />
                             Team</h2>
                             <p>We specialize in classic cuts and constantly seek out the latest trends and techniques to share with our guests.</p>
