--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
+							<div class="image"><img src="images/pic01.jpg" alt="Premium Barber Shop" /></div><div class="content">
 								<h2>About <br />
 								Jack &amp; Harlow</h2>
 								<p>We are the premier, long-standing full-service barber shop in the Rockliffe Park area.</p>
@@ -61,7 +61,7 @@
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
+							<div class="image"><img src="images/pic02.jpg" alt="Barber Shop Seating" /></div><div class="content">
 								<h2>Barber Shop<br />
 								Hours</h2>
 								<p>Monday - Sunday 9am - 6pm</p>
@@ -70,7 +70,7 @@
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
+							<div class="image"><img src="images/pic03.jpg" alt="Barber Team" /></div><div class="content">
 								<h2>The<br />
 								Team</h2>
 								<p>We specialize in classic cuts and constantly seek out the latest trends and techniques to share with our guests.</p>
