--- a/team.html
+++ b/team.html
@@ -176,7 +176,7 @@
                 <!-- Two  -->
                 <section id="two" class="wrapper alt style2">
                     <section class="spotlight">
-                        <div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
+                        <div class="image"><img src="images/pic01.jpg" alt="Premium Barber Shop" /></div><div class="content">
                             <h2>About <br />
                             Jack &amp; Harlow</h2>
                             <p>We are the premier, long-standing full-service barber shop in the Rockliffe Park area.</p>
@@ -184,7 +184,7 @@
                         </div>
                     </section>
                     <section class="spotlight">
-                        <div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
+                        <div class="image"><img src="images/pic02.jpg" alt="Barber Shop Seating" /></div><div class="content">
                             <h2>Barber Shop<br />
                             Hours</h2>
                             <p>Monday - Sunday 9am - 6pm</p>
