Fixed the images that were not working on Safari by converting to webp format

--- a/team.html
+++ b/team.html
@@ -62,7 +62,7 @@
                                 </li>
 							</ul>
 							<section>
-								<img src="images/jack.jpg" alt="Jack">
+								<img src="images/jack.webp" alt="Jack">
 								<h4>Jack</h4>
 								<h5>Co-Founder</h5>
 								<p>Born &amp; raised in Ottawa, Jack switched coasts, working in Vancouver before returning home to the best coast.</p>
@@ -73,7 +73,7 @@
                                 </li>
 							</ul>
 							<section>
-								<img src="images/harlow.jpg" alt="Harlow">
+								<img src="images/harlow.webp" alt="Harlow">
 								<h4>Harlow</h4>
 								<h5>Co-Founder</h5>
 								<p>Ottawa native, Harlow, worked on-set in the industry with Hollywood celebrities before co-founding Jack &amp; Harlow's.
@@ -85,7 +85,7 @@
                                 </li>
 							</ul>
 							<section>
-								<img src="images/david.jpg" alt="David">
+								<img src="images/david.webp" alt="David">
 								<h4>David</h4>
 								<h5>Associate Barber</h5>
 								<p>
@@ -98,7 +98,7 @@
                                 </li>
 							</ul>
 							<section>
-								<img src="images/brock.jpg" alt="Brock">
+								<img src="images/brock.webp" alt="Brock">
 								<h4>Brock</h4>
 								<h5>Associate Barber</h5>
 								<p>
@@ -137,7 +137,7 @@
                                 </li>
 							</ul>
 							<section>
-								<img src="images/damian.jpg" alt="Damian">
+								<img src="images/damian.webp" alt="Damian">
 								<h4>Damian</h4>
 								<h5>Associate Barber</h5>
 								<p>
@@ -150,7 +150,7 @@
                                 </li>
 							</ul>
 							<section>
-								<img src="images/finn.jpg" alt="Finn">
+								<img src="images/finn.webp" alt="Finn">
 								<h4>Finn</h4>
 								<h5>Associate Barber</h5>
 								<p>
