Changed some text

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 								Hours</h2>
 								<p>Monday - Sunday 9am - 6pm</p>
 								<p><a href="contact.html" class="button fit">Contact Us</a></p>
-								<p><em>Due to current COVID-19 Health Advisories, we are limiting the salon to 50% capacity.</em></p>
+								<p><em>Due to current COVID-19 Health Advisories, we are limiting the shop to 50% capacity.</em></p>
 							</div>
 						</section>
 						<section class="spotlight">
