Updated phone number

--- a/about.html
+++ b/about.html
@@ -93,7 +93,7 @@
 								<p>Due to current COVID-19 restrictions we are booking appointments on an individual basis.</p>
 							</header>
 							<ul class="actions stacked">
-								<li><a href="contact.html" class="button fit primary">613-###-###</a></li>
+								<li><a href="contact.html" class="button fit primary">613-123-4567</a></li>
 								<li><a href="contact.html" class="button fit">Contact Us</a></li>
 							</ul>
 						</div>
